<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/recyclerViewColor"
    tools:context=".activities.StockObjectActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="178dp"
        android:layout_gravity="center"
        android:layout_margin="7dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="6dp"
        android:clickable="true"
        android:elevation="120dp"
        android:focusable="true"
        android:orientation="vertical"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/stock_symbol"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="150dp"
                android:layout_marginBottom="4dp"
                android:text="@string/symbol_filler"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/company_name"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stock_symbol"
                android:text="@string/company_name_filler"
                android:layout_marginStart="8dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/open_value"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_name"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/open_value_filler"
                android:textColor="@color/recyclerViewColor" />

            <TextView
                android:id="@+id/close_value"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/open_value"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/close_value_filler"
                android:textColor="@color/recyclerViewColor" />

            <TextView
                android:id="@+id/high_value"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/close_value"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/high_value_filler"
                android:textColor="@color/recyclerViewColor" />

            <TextView
                android:id="@+id/low_value"
                android:layout_width="106dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/high_value"
                android:layout_marginStart="8dp"
                android:text="@string/low_value_filler"
                android:textColor="@color/recyclerViewColor" />

            <TextView
                android:id="@+id/week_52_high"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/company_name"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/open_value"
                android:text="@string/w52_high_value_filler"
                android:textColor="@color/recyclerViewColor" />

            <TextView
                android:id="@+id/week_52_low"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/week_52_high"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/close_value"
                android:text="@string/w52_low_value_filler"
                android:textColor="@color/recyclerViewColor" />

            <TextView
                android:id="@+id/marketcap_value"
                android:layout_width="133dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/week_52_low"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/high_value"
                android:text="@string/market_cap_value_object_filler"
                android:textColor="@color/recyclerViewColor" />

            <TextView
                android:id="@+id/change_value"
                android:layout_width="149dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stock_symbol"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="4dp"
                android:layout_toEndOf="@+id/company_name"
                android:gravity="end"
                android:text="@string/change_value_filler"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="11dp"
            android:src="@drawable/ic_add_black_24dp"
            android:visibility="invisible"
            app:backgroundTint="@color/colorPrimary"
            tools:layout_editor_absoluteX="349dp"
            tools:layout_editor_absoluteY="675dp" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="11dp"
            android:src="@drawable/ic_cancel_white_24dp"
            app:backgroundTint="@color/RED"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="349dp"
            tools:layout_editor_absoluteY="675dp" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>