<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="1dp"
    android:elevation="120dp"
    android:layout_gravity="center"
    app:cardBackgroundColor="@color/colorPrimaryDark"
    android:clickable="true"
    android:focusable="true">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:clickable="true"
        android:focusable="true"
        android:paddingLeft="@dimen/row_padding_side"
        android:paddingTop="@dimen/row_padding"
        android:paddingRight="@dimen/row_padding_side"
        android:paddingBottom="@dimen/row_padding"
        >

        <RelativeLayout
            android:id="@+id/relative_layout"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            >

            <TextView
                android:id="@+id/stock_symbol"
                android:layout_width="58dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/symbol_filler"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/company_name"
                android:layout_width="194dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="32dp"
                android:fontFamily="sans-serif"
                android:text="@string/company_name_filler"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/realtime_price"
                android:layout_width="67dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="287dp"
                android:layout_marginTop="28dp"
                android:fontFamily="sans-serif"
                android:text="@string/realtime_value_filler"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/marketcap_value"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="288dp"
                android:layout_marginTop="51dp"
                android:fontFamily="sans-serif"
                android:text="@string/realtime_value_filler"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/change_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="1dp"
                android:layout_marginTop="52dp"
                android:fontFamily="sans-serif"
                android:text="@string/realtime_value_filler"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stock_market"
                android:layout_width="81dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="271dp"
                android:layout_marginTop="2dp"
                android:fontFamily="sans-serif"
                android:text="@string/primary_market_filler"
                android:textAlignment="textEnd"
                android:textColor="@color/recyclerViewColor"
                android:textSize="18sp"
                android:textStyle="normal" />
        </RelativeLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
